--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,6 +1,6 @@
 <!-- includes HTML for app component-->
 <div>
-  
+
    <samSpace labelname = "space" ></samSpace>
    <samHeader labelname = "header" ></samHeader>
   <nav>
@@ -13,4 +13,8 @@
  </main>
 
 
+ <samButton labelname = "button" [config] = buttonValue></samButton>
+ <samLabel labelname="label" [config] = labelValue></samLabel>
+ <samAccordions labelname = "accordions" [config] = accordionsValue></samAccordions>
+ <samSelect labelname = "select" [config] = selectValue></samSelect>
  <samFooter labelname = "footer" ></samFooter>
