--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -13,7 +13,7 @@
  </main>
 
 
- <samButton labelname = "button" [config] = buttonValue></samButton>
+ <samButton (click)='clicked()' labelname = "button" [config] = buttonValue></samButton>
  <samLabel labelname="label" [config] = labelValue></samLabel>
  <samAccordions labelname = "accordions" [config] = accordionsValue></samAccordions>
  <samSelect labelname = "select" [config] = selectValue></samSelect>
