dropdown phrase change

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -10,7 +10,7 @@
         <div class="usa-width-one-fourth">
           <label for="index" class="usa-sr-only">Select an index</label>
           <select name="index" id="index" [(ngModel)]="index">
-            <option [value]="indexes[0]" selected="true">Select an index</option>
+            <option [value]="indexes[0]" selected="true">All</option>
 						<option [value]="indexes[1]">Assistance Listings</option>
             <option [value]="indexes[2]">Opportunities</option>
           </select>
