minor change to styles

--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -510,7 +510,7 @@
           {{item.fiscalYear}}
           <span class="historyDetails" >{{item.actionType | historicalIndexLabel}}</span>
         </p>
-        <p id="changeDescription"><i>{{item.changeDescription}}</i></p>
+        <p id="changeDescription">{{item.changeDescription}}</p>
       </div>
     </section>
 
