--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -3,6 +3,10 @@
 		<h1>SAM.gov Search Results</h1>
 	</div>
   <div class="usa-width-one">
+    <fh-input #fhInput (organization)="onOrganizationChange($event)"></fh-input>
+    <br/>
+  </div>
+  <div class="usa-width-one">
     <form class="usa-search usa-search-big m_B-3x" (ngSubmit)="runSearch(true)" #f="ngForm">
       <div class="usa-width-one-fourth">
         <label for="index" class="usa-sr-only">Select an index</label>
