--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -1,3 +1,3 @@
 <div class="card-container">
-  <h1 x-large class="sample-content">SAM CLIENT IMPLEMENTATION</h1>
+  <h1 class="sample-content">SAM CLIENT IMPLEMENTATION</h1>
 </div>
