--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -14,8 +14,8 @@
  </main>
 
 
- <samButton (click)='clicked()' labelname = "button" [config] = buttonValue></samButton>
+ <!--samButton (click)='clicked()' labelname = "button" [config] = buttonValue></samButton>
  <samLabel labelname="label" [config] = labelValue></samLabel>
  <samAccordions labelname = "accordions" [config] = accordionsValue></samAccordions>
- <samSelect labelname = "select" [config] = selectValue></samSelect>
+ <samSelect labelname = "select" [config] = selectValue></samSelect-->
  <samFooter labelname = "footer" ></samFooter>
