unit test updates and ui tweaks

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -3,7 +3,7 @@
 		<h1>SAM.gov Search Results</h1>
 	</div>
   <div class="usa-width-one">
-    <fh-input #fhInput (organization)="onOrganizationChange($event)"></fh-input>
+    <fh-input #fhInput [hideOffice]="true" (organization)="onOrganizationChange($event)"></fh-input>
     <br/>
   </div>
   <div class="usa-width-one">
