--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -1,3 +1,26 @@
-<div class="card-container">
-  <h1 class="sample-content">SAM CLIENT IMPLEMENTATION</h1>
+<div class="card-container usa-grid-full">
+	<div class="usa-width-one">
+  	<h1 class="sample-content">SAM CLIENT IMPLEMENTATION</h1>
+	</div>
+  <div class="usa-width-one">
+  	<form class="usa-search usa-search-big m_B-3x" (ngSubmit)="runSearch()" #f="ngForm">
+      <div class="usa-width-one-fourth">
+        <label for="index" class="usa-sr-only">Select an index</label>
+        <select name="index" id="index" [(ngModel)]="index">
+          <option [value]="indexes[0]" selected="true">All</option>
+					<option [value]="indexes[1]">Assistance Listings</option>
+          <option [value]="indexes[2]">Opportunities</option>
+        </select>
+      </div>
+    	<div role="search" class="usa-width-three-fourths">
+        <label class="usa-sr-only" for="search-field-big">Search big</label>
+        <input id="search-field-big" type="search" name="keyword" placeholder="#keyword" [(ngModel)]="keyword" autofocus>
+        <button type="submit">
+          <span class="usa-search-submit-text">Search</span>
+        </button>
+      </div>
+    </form>
+  </div>
+  <!-- empty space -->
+  <div style="height:500px;"></div>
 </div>
