--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -474,15 +474,17 @@
     <section *ngIf="oHistoricalIndex">
       <h2 id="history">History</h2><br>
       <div id="historyItem" *ngFor="let item of oHistoricalIndex">
-        <p *ngIf="item.statusCode" style="text-align:left; margin-top:.7em">
-          {{item.fiscalYear}} ({{item.statusCode}})
-          <span class="historyDetails">{{item.actionType | historicalIndexLabel}}</span>
-        </p>
-        <p id="fiscalYear" *ngIf="!item.statusCode">
-          {{item.fiscalYear}}
-          <span class="historyDetails" >{{item.actionType | historicalIndexLabel}}</span>
-        </p>
-        <p id="changeDescription">{{item.changeDescription}}</p>
+        <div *ngIf="(!(item.actionType == 'publish' && item.index != 1))">
+          <p *ngIf="item.statusCode" style="text-align:left; margin-top:.7em">
+            {{item.fiscalYear}} ({{item.statusCode}})
+            <span class="historyDetails">{{item.actionType | historicalIndexLabel}}</span>
+          </p>
+          <p id="fiscalYear" *ngIf="!item.statusCode">
+            {{item.fiscalYear}}
+            <span class="historyDetails" >{{item.actionType | historicalIndexLabel}}</span>
+          </p>
+          <p id="changeDescription">{{item.changeDescription}}</p>
+        </div>
       </div>
     </section>
 
