--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -29,6 +29,11 @@
       <assistance-listing-result  *ngIf="row._type=='CFDA'" class="usa-grid-full" [data]="row"></assistance-listing-result>
       <hr class="m_T-5x" />
   	</div>
+    <div *ngIf="!data.results">
+      <br/>
+      <p>No results found for '<span [innerText]="oldKeyword"></span>'</p>
+      <div style="height:300px;"></div>
+    </div>
 	</div>
   <div *ngIf="data.results">
     <div class="usa-width-one-whole">
