--- a/src/app/fal/program/program-view.component.html
+++ b/src/app/fal/program/program-view.component.html
@@ -473,8 +473,8 @@
     <!--History Section-->
     <section *ngIf="oHistoricalIndex">
       <h2 id="history">History</h2><br>
-      <div id="historyItem" *ngFor="let item of oHistoricalIndex">
-        <div *ngIf="(!(item.actionType == 'publish' && item.index != 1))">
+      <div *ngFor="let item of oHistoricalIndex">
+        <div id="historyItem" *ngIf="(!(item.actionType == 'publish' && item.index != 1))">
           <p *ngIf="item.statusCode" style="text-align:left; margin-top:.7em">
             {{item.fiscalYear}} ({{item.statusCode}})
             <span class="historyDetails">{{item.actionType | historicalIndexLabel}}</span>
