--- a/src/app/search/fh.template.html
+++ b/src/app/search/fh.template.html
@@ -11,9 +11,9 @@
     <div class='usa-grid-full'>
         <div class='usa-width-one-third'>
             <label for='jqDepartmentFH'>Department</label>
-            <select [(ngModel)]='selectedDeptId' (ngModelChange)='setOrganizationId("department")' id='jqDepartmentFH'>
+            <select [(ngModel)]="selectedDeptId" (ngModelChange)='setOrganizationId("department")' id='jqDepartmentFH'>
                 <option value=''>Please select a Department</option>
-                <option *ngFor="let dpmt of dictionary.aDepartment" [value]="dpmt.elementId">{{dpmt.name}}</option>
+                <option *ngFor="let dpmt of dictionary.aDepartment" [value]="dpmt.elementId + '|' + dpmt.sourceOrganizationId">{{dpmt.name}}</option>
             </select>
             <span *ngIf="false" class='department-label2'> {{ departmentLabel }} </span>
         </div>
@@ -21,7 +21,7 @@
             <label for='jqAgencyFH'>Agency</label>
             <select [(ngModel)]="selectedAgencyId" (ngModelChange)='setOrganizationId("agency")' [disabled]="lockAgency" id='jqAgencyFH'>
                 <option value=''>Please select an Agency</option>
-                <option *ngFor="let agency of dictionary.aAgency" [value]="agency.elementId">{{agency.name}}</option>
+                <option *ngFor="let agency of dictionary.aAgency" [value]="agency.elementId + '|' + agency.sourceOrganizationId">{{agency.name}}</option>
             </select>
         </div>
         <div *ngIf='checkOffice()' class='usa-width-one-third'>
